# 3D-Renderer

./: .gitignore  CMakeLists.txt
src/: main.cpp
src/core/: application.cpp  application.hpp  window.cpp  window.hpp
src/renderer/: renderer.hpp  shader.cpp  shader.hpp
src/utils/: logger.cpp  logger.hpp
